--- a/src/assets/styles/auth.css
+++ b/src/assets/styles/auth.css
@@ -1,3 +1,10 @@
+.card-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
 .ant-card{
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
     min-width: 300px;    
