--- a/src/assets/styles/invoiceForm.css
+++ b/src/assets/styles/invoiceForm.css
@@ -1,53 +1,83 @@
-
-  .textarea-col .ant-form-item{
-    margin: 0;
-  }
-  
-  .ant-form-item-label{
-    padding: 0 !important ;
-  }
-  
-  .ant-picker{
-    width: 100%;
-  }
-  
-  .ant-select-selection-item{
-    flex : none !important
-  }
-
-
-.ant-table-wrapper .ant-table-cell {
-    padding: 5px !important;
-    text-align: center !important;
+.form-container {
+  height: 100%;
+  width: 90%;
 }
 
-  
-.billing-data .ant-col{
-    padding: 0 4px !important;
-  }
-  
+.textarea-col .ant-form-item {
+  margin: 0;
+}
+
+.ant-form-item-label {
+  padding: 0 !important;
+}
+
+.ant-picker {
+  width: 100%;
+}
+
+.ant-select-selection-item {
+  flex: none !important
+}
+
+.ant-input-number {
+  width: 100% !important;
+}
+
+.ant-table-wrapper .ant-table-cell {
+  padding: 5px !important;
+  text-align: center !important;
+}
+
+
+
+.billing-data .ant-col {
+  padding: 0 4px !important;
+}
+
 .print-content {
-  visibility: hidden; /* Make the print content invisible on screen */
-  position: absolute; /* Take it out of the flow of the page */
+  visibility: hidden;
+  position: absolute;
   width: 0;
   height: 0;
   padding: 0;
 }
-@media print{
-   
-  .print-content, .print-content * {
-    visibility: visible; /* Make the print content visible */
+
+@media only screen and (max-width: 767px) {
+  .form-container {
+    width: 100%;
+  }
+
+  .form-container .ant-form {
+    padding: 20px 10px !important;
+  }
+
+  .form-container .ant-table-wrapper {
+    margin: 20px 0px !important
+  }
+
+  .textfield-col .ant-form-item {
+    margin: 0;
+  }
+
 }
 
-/* Optional: Ensure the print content takes up the full page during printing */
-.print-content {
-    position: fixed; /* Ensure it stays in place on the page during printing */
+@media print {
+
+  .print-content,
+  .print-content * {
+    visibility: visible;
+  }
+
+  .print-content {
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     padding: 20px;
     box-sizing: border-box;
-    border: 1px solid black; /* Optional, for a border around the print content */
+    border: 1px solid black;
+    page-break-before: always;
+  }
 }
-}
+
