Added download feature for pdf

--- a/src/App.css
+++ b/src/App.css
@@ -30,4 +30,11 @@ body {
     -webkit-print-color-adjust: exact;
     print-color-adjust: exact;
   }
-}
+  
+  #root {
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    text-align: center !important;
+  }
+} 
