--- a/src/assets/styles/invoiceForm.css
+++ b/src/assets/styles/invoiceForm.css
@@ -19,6 +19,12 @@
   flex: none !important
 }
 
+.ant-select-dropdown {
+  touch-action: pan-y; /* Enable vertical scrolling */
+  overflow-y: auto !important;
+  max-height: 300px; /* Set a max height for the dropdown */
+}
+
 .ant-input-number {
   width: 100% !important;
 }
@@ -46,6 +52,18 @@
   .form-container {
     width: 100%;
   }
+  
+  .print-content {
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
+    top: 0 ;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
+    page-break-before: always;
+  }
 
   .form-container .ant-form {
     padding: 20px 10px !important;
@@ -62,21 +80,21 @@
 }
 
 @media print {
-
   .print-content,
   .print-content * {
     visibility: visible;
   }
 
   .print-content {
-    position: fixed;
-    top: 0;
+    /* position: absolute; */
+    display: flex ;
+    align-items: center ;
+    justify-content: center ;
+    top: 0 ;
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 20px;
     box-sizing: border-box;
-    border: 1px solid black;
     page-break-before: always;
   }
 }
