--- a/src/assets/styles/printContent.css
+++ b/src/assets/styles/printContent.css
@@ -4,10 +4,10 @@
 .print-section {
     height: max-content;
     width: auto;
-    border: 1px solid black;
-    padding: 10px;
     font-weight: 500;
     text-align: center;
+    border: 1px solid black;
+    padding: 20px;
 }
 
 .print-section .ant-form-item-label>label,
@@ -21,14 +21,13 @@
     font-size: 12px !important;
 }
 
-*/ .page-header {
+.page-header {
     padding: 0 20px;
 }
 
 .first-row {
     display: flex;
     justify-content: space-between;
-    padding: 0 20px;
 }
 
 .title-row {
@@ -179,6 +178,23 @@
     padding-bottom: 4px;
     font-weight: 900;
 }
+
+@media only screen and (max-width:767px) {
+    .inner-print-section {
+        border: 2px solid black;
+        padding: 20px 0px !important;
+    }
+
+    .print-section {
+        display: flex !important;
+        align-items: center !important;
+        justify-content: center !important;
+        box-sizing: border-box !important   ;
+        margin-top: 10%;
+        border: none !important;
+    }
+}
+
 
 @media print {
     .customer-details .title-row {
